add: latest developments

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,9 +18,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["/*"],
-      "@/public/*": ["public/*"],
-      "@/styles/*": ["styles/*"],
-      "@/src/*": ["src/*"]
+      "@/public/*": ["./public/*"],
+      "@/styles/*": ["./styles/*"],
+      "@/src/*": ["./src/*"]
   }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
