--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
-    "react-toastify": "^8.1.0"
+    "react-toastify": "^8.1.0",
+    "react-scroll-to-top": "^1.0.8"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
