--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.3.0",
     "react-redux": "^7.2.6",
     "react-scroll-to-top": "^1.0.8",
-    "react-toastify": "^8.1.0"
+    "react-toastify": "^8.1.0",
+    "react-twitter-embed": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
